# routes/index.js
@@ -7,6 +7,7 @@ import borrowRoutes from './borrowRoutes.js';
 import dashboardRoutes from './dashboardRoutes.js';
 import categoryRoutes from './categoryRoutes.js';
 import returnRoutes from './returnRoutes.js';
+import detailReturnRoutes from './detailReturnRoutes.js';
 
 const router = express.Router();
 
@@ -18,5 +19,6 @@ router.use('/borrow', borrowRoutes);
 router.use('/dashboard', dashboardRoutes);
 router.use('/categories', categoryRoutes);
 router.use('/returns', returnRoutes);
+router.use('/return-details', detailReturnRoutes);
 
 export default router;
